--- a/Kubernetes/Deployment.yaml
+++ b/Kubernetes/Deployment.yaml
@@ -1,37 +1,37 @@
 ﻿apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: BusinessApp1
+ name: businessapp1
  labels:
-    app: BusinessApp1
+    app: businessapp1
 spec:
  replicas: 2
  selector:
     matchLabels:
-      app: BusinessApp1
+      app: businessapp1
  template:
     metadata:
        labels:
-        app: BusinessApp1
+        app: businessapp1
     spec:
       containers:
-      - name: BusinessApp1Container
-        image: us.icr.io/ibmperumf2/BusinessApp1
+      - name: businessapp1container
+        image: us.icr.io/ibmperumf2/businessapp1
         ports:
         - containerPort: 80        
 ---
 apiVersion: v1
 kind: Service
 metadata:
- name: BusinessApp1
+ name: businessapp1
 spec:
  type: NodePort
  selector:
-   app: BusinessApp1
+   app: businessapp1
  ports:
    - name: client
      protocol: TCP
      port: 80
      nodePort: 32087
  selector:
-   app: BusinessApp1
+   app: businessapp1
